--- a/2023.html
+++ b/2023.html
@@ -1285,15 +1285,260 @@ Pri zbere odpadkov, som našiel jedno staré 🪹 padnuté. 🪺 Do tohoto 🪺 
  </tr>
 </table>
 
+<br>
+<br>
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>publikované
+na facebooku 03.04.2023</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🏞️❋🌅  Veľkonočnú nedeľu  som oslávil ďalším zberom odpadkov z Čunovských jazier. 💦Hlavne z veľkého jazera💦🌦️Počasie bolo tradične aprílové chvíľu jemne pršalo a ukázalo sa aj slniečko🌦️
+<br><br>
+🪛✂🔨Na začiatku som sa vyšplhal na topoľ 🪜🌳a dal som dole obruče ⛓️🔗 , ktoré som tam objavil ešte minule. 
+<br><br>
+👀🔎🌳Potom som na inom mieste pod padnutým stromom objavil tajnú skrýšu zakrytú kôrou. 🪵🤫Niekto si tam skryl plastovú misku s kameňmi 🪨a pod nimi rôzne špagáty a kábliky 🧵určené pravdepodobne na viazanie kmeňov vo vode. 🪵💦🧵🪵 Z kmeňa pri vode som odstránil klince a očká. 🪛🪝🔨
+<br><br>
+🚶🧹🗑️ Neskôr som sa presunul do zadu na miesto, kde sa v lete často vyskytuje mládež 💉🌿🍃 💨 🚬🍾😵a zbieral som odpadky v nedostupných kríkoch.🌵🌿 Ponachádzal som tam fajčiarsky odpad, 🌿😊🍃 💨, alkohol odpad, PET s vodou, repelent, PET uzávery, obaly, mikrotén, alobal, leukoplast atď. 💚🚮♻
+<br><br>
+#cunovskejazera #velkejazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cunovo #rusovce #bratislava #luznelesy #slovensko #cistavoda #zberodpadkov #plasty #upratovanie
+</span></p>
+<br>
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image128.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image128.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image129.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image129.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image130.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image130.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image131.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image131.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image132.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image132.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image131.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image131.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image132.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image132.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image133.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image133.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image134.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image134.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image135.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image135.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image136.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image136.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image137.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image137.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image138.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image138.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image139.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image139.jpg"></a></p>
+  </td>
+
+ </tr>
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>😵💨🌿🍃🚬😊</p>
+  </td>
+ </tr>
+
+</table>
+
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image140.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image140.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image141.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image141.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image142.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image142.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image143.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image143.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image144.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image144.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2023L/image145.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2023/image145.jpg"></a></p>
+  </td>
+
+ </tr>
+ <tr>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>😵💨🌿🍃🚬😊</p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+  <td height=20 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'></p>
+  </td>
+ </tr>
+
+</table>
+
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image146.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image146.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image147.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image147.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image148.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image148.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image149.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image149.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image150.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image150.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image151.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image151.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2023L/image152.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2023/image152.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image153.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image153.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image154.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image154.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image155.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image155.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+
+<br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image156.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image156.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image157.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image157.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image158.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image158.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
 
 <br>
 <br>
 <br>
 <br>
-	
-	
-	
-	
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 	
 	
 	
