--- a/2023.html
+++ b/2023.html
@@ -2352,37 +2352,176 @@ Pozbieral som aj 🎣 rybársky odpad 🕯️ sviečku, vosk, vyrobený plavák 
 
 </table>
 
-<br>
+ <br><br>
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>publikované
+na facebooku 10.12.2023</span></u></b></span></p>	
+
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+🥳🎆🎉A je tu koniec roka 2023 a tak sa patrí poďakovať všetkým, ktorí sa pričinili o čistotu a ochranu Čunovských jazier👍 👏 Tento rok sú jazerá naozaj krásne čisté✨🪄🌅
+ <br><br>
+ 🧹🚶Včera som urobil posledný zber odpadkov v tomto roku.📅
+ <br><br>
+Zbieral som odpadky prevažne z malého jazera 💦z ťažko dostupných brehov, pichľavých kríkov a bobrích cestičiek. 🌵🌿🌳 🦫
+ <br><br>
+Veľkú časť odpadkov som povyberal z vody v naplaveninách pri brehu.  💦🪵💦Prevažovali tak odpadky ako PET fľaše, uzávery a krúžky,🎣rybárske slamky, plaváky a polystyrén, 🔵 loptičky a kružok po nezodpovedných majiteľoch psíkov 🚶🐕, sklo fľaše, obaly. Pozbieral som aj handru, obaly, zabalenú plechovku a dezodorant z kríkoch. Syntetické obrúsky som našiel pri cestičke veľkého jazera.💚🚮♻
+ <br><br>
+🛍️Na brehu som videl trčiaci igelit, ale netušil som, že bude až taký veľký. Nakoniec sa z neho vykľulo akési retro maliarske igelitové vrece. Už bolo obrastené koreňmi a pravdepodobne ho tam niekto kedysi dávno použil na spevnenie brehu.
+ <br><br>
+Pripomenulo mi to ako som pred rokmi z brehov veľkého jazera vyťahoval plastové vrecia a koberce. Brehy malého jazera sú prešpikované takýmito kúskami.
+ <br>
+💚🚮♻
+ <br><br>
+#cunovskejazera #velkejazero #jazera #ostrovnelucky #bezodpadkov #odpadky #bezodpadu #neporiadok #bordel #rybarskyodpad #smeti #cistapriroda #priroda #cunovo #rusovce #bratislava #luznelesy #slovensko #cistavoda #zberodpadkov #plasty #upratovanie
+</span></p>
 
 <br>
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image281.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image281.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image282.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image282.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image283.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image283.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image284.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image284.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image285.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image285.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image286.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image286.jpg"></a></p>
+  </td>
+
+ </tr>
+</table>
+
 <br>
+
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image287.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image287.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image288.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image288.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image289.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image289.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image290.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image290.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image291.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image291.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image292.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image292.jpg"></a></p>
+  </td>
+
+
+ </tr>
+</table>
 <br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image293.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image293.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image294.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image294.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image295.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image295.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image296.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image296.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
+
 <br>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image297.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image297.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image298.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image298.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image299.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image299.jpg"></a></p>
+  </td>
+ </tr>
+</table>
+
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image300.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image300.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image301.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image301.jpg"></a></p>
+  </td>
 
-
-
-
-
-
-
-
-
-
-
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2023L/image302.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2023/image302.jpg"></a></p>
+  </td>
+ </tr>
+</table>
 
 
 
 
 
 	
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
