--- a/videa.html
+++ b/videa.html
@@ -19,42 +19,80 @@
 <link rel="stylesheet" href="mediaScreen.css">
   
 </head>
+
   <body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2><u>Videá môjho vyzbieraného odpadu na Čunovských jazerách</u></h2>
+<h3>Všetky roky</h3>
+
+<video width="400" controls>
+    <source src="VIDEA/vsetko.mp4" type="video/mp4">
+    váš prehliadač nepodporuje video 
+   </video>  
+   <br>
+
+<h3>roky 2016 , 2017 , 2018</h3>
    <video width="400" controls>
-    <source src="VIDEO/2018.mp4" type="video/mp4">
+    <source src="VIDEA/2018.mp4" type="video/mp4">
     váš prehliadač nepodporuje video 
    </video> 
   <br>
+<h3>rok 2019</h3>
 <video width="400" controls>
-    <source src="VIDEO/2019.mp4" type="video/mp4">
+    <source src="VIDEA/2019.mp4" type="video/mp4">
     váš prehliadač nepodporuje video 
    </video> 
     <br>
+<h3>rok 2020</h3>
 <video width="400" controls>
-    <source src="VIDEO/2020.mp4" type="video/mp4">
+    <source src="VIDEA/2020.mp4" type="video/mp4">
     váš prehliadač nepodporuje video 
    </video> 
     <br>
+<h3>rok 2021</h3>
 <video width="400" controls>
-    <source src="VIDEO/2021.mp4" type="video/mp4">
+    <source src="VIDEA/2021.mp4" type="video/mp4">
     váš prehliadač nepodporuje video 
    </video> 
     <br>
+<h3>rok 2022</h3>
 <video width="400" controls>
-    <source src="VIDEO/2022.mp4" type="video/mp4">
+    <source src="VIDEA/2022.mp4" type="video/mp4">
     váš prehliadač nepodporuje video 
    </video> 
     <br>
+<h3>rok 2023</h3>
 <video width="400" controls>
-    <source src="VIDEO/2023.mp4" type="video/mp4">
+    <source src="VIDEA/2023.mp4" type="video/mp4">
     váš prehliadač nepodporuje video 
    </video> 
-       <br>
-<video width="400" controls>
-    <source src="VIDEO/vsetko.mp4" type="video/mp4">
-    váš prehliadač nepodporuje video 
-   </video>  
+       
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 </body>
 </html>
-
   
