--- a/2024.html
+++ b/2024.html
@@ -1,1 +1,224 @@
+<html>
+
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
+<meta name=Generator content="Microsoft Word 15 (filtered)">
+<title>Čunovské jazerá 2024+</title>
+<style>
+<!--u
+	{text-decoration-color:blue;
+	text-decoration-thickness: 20%;}
+
+ /* Font Definitions */
+ @font-face
+	{font-family:"Cambria Math";
+	panose-1:2 4 5 3 5 4 6 3 2 4;}
+@font-face
+	{font-family:Calibri;
+	panose-1:2 15 5 2 2 2 4 3 2 4;}
+@font-face
+	{font-family:"Segoe UI Emoji";
+	panose-1:2 11 5 2 4 2 4 2 2 3;}
+@font-face
+	{font-family:"Segoe UI Symbol";
+	panose-1:2 11 5 2 4 2 4 2 2 3;}
+ /* Style Definitions */
+ p.MsoNormal, li.MsoNormal, div.MsoNormal
+	{margin-top:0cm;
+	margin-right:0cm;
+	margin-bottom:8.0pt;
+	margin-left:0cm;
+	line-height:106%;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;}
+a:link, span.MsoHyperlink
+	{color:blue;
+	text-decoration:underline;}
+a:visited, span.MsoHyperlinkFollowed
+	{color:#954F72;
+	text-decoration:underline;}
+u	{text-decoration-color:blue;
+         text-decoration-thickness: 20%;}
+body    {background-color: black;  
+        color: white;}
+a 	{font-size: 20.0pt;}
+p.MsoNoSpacing, li.MsoNoSpacing, div.MsoNoSpacing
+	{margin:0cm;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;}
+p.msonormal0, li.msonormal0, div.msonormal0
+	{mso-style-name:msonormal;
+	margin-right:0cm;
+	margin-left:0cm;
+	font-size:12.0pt;
+	font-family:"Times New Roman",serif;}
+p.msochpdefault, li.msochpdefault, div.msochpdefault
+	{mso-style-name:msochpdefault;
+	margin-right:0cm;
+	margin-left:0cm;
+	font-size:12.0pt;
+	font-family:"Calibri",sans-serif;}
+p.msopapdefault, li.msopapdefault, div.msopapdefault
+	{mso-style-name:msopapdefault;
+	margin-right:0cm;
+	margin-bottom:8.0pt;
+	margin-left:0cm;
+	line-height:106%;
+	font-size:12.0pt;
+	font-family:"Times New Roman",serif;}
+span.nc684nl6
+	{mso-style-name:nc684nl6;}
+span.d2edcug0
+	{mso-style-name:d2edcug0;}
+.MsoChpDefault
+	{font-size:10.0pt;
+	font-family:"Calibri",sans-serif;}
+.MsoPapDefault
+	{margin-bottom:8.0pt;
+	line-height:106%;}
+@page WordSection1
+	{size:595.3pt 841.9pt;
+	margin:70.85pt 70.85pt 70.85pt 70.85pt;}
+div.WordSection1
+	{page:WordSection1;}
+-->
+</style>
+
+</head>
+
+<body bgcolor=black lang=SK link=blue vlink="#954F72" style='word-wrap:break-word'>
+
+<div class=WordSection1>
+
+<p class=MsoNormal><b><span style='font-size:16.0pt;line-height:106%;
+font-family:"Arial",sans-serif;color:#FFAA00'>Zber odpadkov na Čunovských
+jazerách v&nbsp;roku 2024 + ďalšie roky</span></b></p>
+
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+Áno odpadkov na jazerách je už menej, ľudí čo ich zbiera je viac. Samozrejme odpadky sa tam budú vyskytovať aj naďalej(pretože niektorí jednotlivci sa jednoducho nezmenia).
+<br>Pokračovať v zbere budem aj nadalej, avšak budem to uverejňovať už iba tu:<br><br>
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 24.02.2024</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+Rybárske miesto kde sú v anonimite. Doniesli si tam drievka, že si budú opekať (čo je tam len tak mimochodom zakázané), dali ich do žltého igelitového sáčku, nechali tam a mysleli si, že im tak nenavlhnú. 
+Žltý sáčok som pridal k ďalším odpadkom z kríkov a brehov pri vode, ktoré som vyzbieral z tohoto miesta v zadu na veľkom jazere. 
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image001.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image001.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2024L/image002.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2024/image002.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'>  <a href="2024L/image003.jpg" target="_blank">
+	<img height=200 id="Obrázok 29" src="2024/image003.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2024L/image004.jpg" target="_blank">
+	<img  height=200 id="Obrázok 30" src="2024/image004.jpg"></a></p>
+  </td>
+ </tr>
+
+</table>
+
+
+
+<br>
+<br>
+<br>
+
+
+
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 03.03.2024</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+Dnes Billa igelitka zahodená hlboko v kríkoch, syntetické servítky, a ďalší odpad...
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image005.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image005.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2024L/image006.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2024/image006.jpg"></a></p>
+  </td>
+ </tr>
+
+</table>
+
+
+<br>
+<br>
+<br>
+
+
+
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 10.03.2024</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+V zadu na veľkom jazere, na miestach kde sa v lete zdržuje mláďež, som dokončil zber odpadkov čo tam ešte poostávali. Všetko odpadky hodené
+v nedostupných kríkoch. Našiel som napr. zadné svetlo z bicykla aj s batériami, sprej v ktorom bolo ešte trochu farby atď. 
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image007.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image007.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2024L/image008.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2024/image008.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2024L/image009.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2024/image009.jpg"></a></p>
+  </td>
+
+ </tr>
+
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+</div>
+</body>
+</html>
 
