--- a/2024.html
+++ b/2024.html
@@ -189,6 +189,10 @@ v nedostupných kríkoch. Našiel som napr. zadné svetlo z bicykla aj s batéri
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2024L/image009.jpg" target="_blank">
 	<img height=200 id="Obrázok 28" src="2024/image009.jpg"></a></p>
   </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><a href="2024L/image010.jpg" target="_blank">
+	<img height=200 id="Obrázok 28" src="2024/image010.jpg"></a></p>
+  </td>
 
  </tr>
 
