--- a/2024.html
+++ b/2024.html
@@ -92,7 +92,7 @@ div.WordSection1
 
 <p class=MsoNormal><b><span style='font-size:16.0pt;line-height:106%;
 font-family:"Arial",sans-serif;color:#FFAA00'>Zber odpadkov na Čunovských
-jazerách v&nbsp; od roku 2024</span></b></p>
+jazerách od roku 2024</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
 Áno odpadkov na jazerách je už menej, ľudí čo ich zbiera je viac. Samozrejme odpadky sa tam budú vyskytovať aj naďalej(pretože niektorí jednotlivci sa jednoducho nezmenia).
