--- a/2024.html
+++ b/2024.html
@@ -201,6 +201,58 @@ v nedostupných kríkoch. Našiel som napr. zadné svetlo z bicykla aj s batéri
 
 
 
+<br><br>
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 05.05.2024</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+ Rozobrané rybárske závažie ( naliaty betón do PET fľaše + zapustený drôt) vyhodené v kríkoch na brehu.
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image011.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image011.jpg"></a></p>
+  </td>
+ </tr>
+
+</table>
+
+<br><br>
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 17.10.2024</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+ V tomto období bola hladina vody na jazere dosť vysoká, pozbieral som odpad z dvoch miest na južnej strane veľkého jazera.
+ Odpad prevažne hodený v kríkoch a vo vysokej tráve. Ale na jednom mieste bol položený na nedostupnom strmom brehu hneď nad vodou.
+ Najprv som si myslel,že to je mikroténový sáčok. Čo to bolo ma prekvapilo - syntetické obrúsky a do nich zabalená injekčná striekačka.
+ No paráda! 
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image012.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image012.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image013.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image013.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image014.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image014.jpg"></a></p>
+  </td>
+ </tr>
+
+</table>
+
+
 
 
 
