--- a/2024.html
+++ b/2024.html
@@ -253,6 +253,30 @@ v nedostupných kríkoch. Našiel som napr. zadné svetlo z bicykla aj s batéri
 </table>
 
 
+<br><br>
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 03.11.2024</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+ Odpadkov na jazerách je pomenej, ale predsa len nejaké som tam našiel, hlavne na miestach kde sa zdržujú rybári - "milovníci" pobytu v prírode.
+ Alebo skôr obžerstva a ožralstva - to na niektorích rybárov sedí. 5-ta cenová a po týchto zmrdoch musia slušní ľudia zbierať odpadky, lebo oni sa
+ ožerú a nechajú po sebe bordel. Raz som takých rybárskych zmrdov stretol - huba plná zbierania odpadkov a v papuli cigarety. Všetko pohádzané v kríkoch. Zlomená rybárska udica, silón, ciagerty, špaky, mikrotén, servítky atď... A je ich tam viac, poostávalo aj na miestach, 
+ v kríkoch, kde sa v lete zdržuje mládež - to bude asi tá, ktorá bojuje za lepší zelenší svet. Ešte že existujú ľudia ktorí si vážia prírodu.
+
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image015.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image015.jpg"></a></p>
+  </td>
+ </tr>
+
+</table>
+
 
 
 
