--- a/2024.html
+++ b/2024.html
@@ -261,7 +261,7 @@ v nedostupných kríkoch. Našiel som napr. zadné svetlo z bicykla aj s batéri
 	
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
  Odpadkov na jazerách je pomenej, ale predsa len nejaké som tam našiel, hlavne na miestach kde sa zdržujú rybári - "milovníci" pobytu v prírode.
- Alebo skôr obžerstva a ožralstva - to na niektorích rybárov sedí. 5-ta cenová a po týchto zmrdoch musia slušní ľudia zbierať odpadky, lebo oni sa
+ Alebo skôr obžerstva a ožralstva - to na niektorých rybárov sedí. 5-ta cenová a po týchto zmrdoch musia slušní ľudia zbierať odpadky, lebo oni sa
  ožerú a nechajú po sebe bordel. Raz som takých rybárskych zmrdov stretol - huba plná zbierania odpadkov a v papuli cigarety. Všetko pohádzané v kríkoch. Zlomená rybárska udica, silón, ciagerty, špaky, mikrotén, servítky atď... A je ich tam viac, poostávalo aj na miestach, 
  v kríkoch, kde sa v lete zdržuje mládež - to bude asi tá, ktorá bojuje za lepší zelenší svet. Ešte že existujú ľudia ktorí si vážia prírodu.
 
