--- a/2024.html
+++ b/2024.html
@@ -261,9 +261,9 @@ v nedostupných kríkoch. Našiel som napr. zadné svetlo z bicykla aj s batéri
 	
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
  Odpadkov na jazerách je pomenej, ale predsa len nejaké som tam našiel, hlavne na miestach kde sa zdržujú rybári - "milovníci" pobytu v prírode.
- Alebo skôr obžerstva a ožralstva - to na niektorých rybárov sedí. 5-ta cenová a po týchto zmrdoch musia slušní ľudia zbierať odpadky, lebo oni sa
- ožerú a nechajú po sebe bordel. Raz som takých rybárskych zmrdov stretol - huba plná zbierania odpadkov a v papuli cigarety. Všetko pohádzané v kríkoch. Zlomená rybárska udica, silón, ciagerty, špaky, mikrotén, servítky atď... A je ich tam viac, poostávalo aj na miestach, 
- v kríkoch, kde sa v lete zdržuje mládež - to bude asi tá, ktorá bojuje za lepší zelenší svet. Ešte že existujú ľudia ktorí si vážia prírodu.
+ Alebo skôr obžerstva a ožralstva - to na niektorých rybárov sedí. 5-ta cenová a po týchto zmrdoch potom zbierame odpadky, lebo oni sa
+ ožerú a nechajú po sebe ohniská a bordel. Všetko pohádzané v kríkoch - poschovávané. Zlomená rybárska udica, silón, ciagerty, špaky, mikrotén, servítky atď... A je ich tam viac, poostávalo aj na miestach, 
+ v kríkoch, kde sa v lete zdržuje mládež. Ešte že existujú ľudia ktorí si vážia prírodu.
 
 </p>
 
@@ -280,8 +280,42 @@ v nedostupných kríkoch. Našiel som napr. zadné svetlo z bicykla aj s batéri
 
 
 
+<br><br>
 
 
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 03.11.2024</span></u></b></span></p>	
+	
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+ Na jazerách v posledných rokoch pribudlo ľudí čo zbierajú odpadky. Odpadkov je síce menej, ale stále sú tam pohádzané a poschovávané kade tade. 
+Najmä na miestach, ktoré sú viac ukryté. Takže možnosť ako mať čisté jazerá je len jedna - zbierať, zbierať, zbierať - aj na nedostupnejších miestach. Inak sa stane to, že jazerá budú opäť ako jedno veľké smetisko. 
+<br><br>
+
+Dnes som pozbieral odpadky z jedného miesta, iba plaveckú plutvu som našiel vyhodenú pri lesnej cestičke kúsok od veľkého jazera. Vo vode
+som našiel mikroténový sáčok, pri vode repelent spray s obsahom, polystyrén krabicu so slamkami, pravdepodobne slúžiacu ako plavák, PET fľašu ...
+
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image016.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image016.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image017.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image017.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image018.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image018.jpg"></a></p>
+  </td>
+
+
+
+ </tr>
+
+</table>
 
 
 
