--- a/2024.html
+++ b/2024.html
@@ -318,6 +318,68 @@ som našiel mikroténový sáčok, pri vode repelent spray s obsahom, polystyré
 </table>
 
 
+<br><br>
+
+
+
+<p class=MsoNormal><span class=nc684nl6><b><u><span style='color:white'>zber odpadkov 29.12.2024</span></u></b></span></p>	
+	
+
+<p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>
+Ak sa kedysi stávalo, že polícia pokutovala a vyháňala ľudí z jazier, dnes už je kúpanie sa na malom jazere 
+povolené a na veľkom jazere tolerované, nikto už nikoho nevyháňa.
+Ale už len ak na veľkom jazere zídete z turistickej cestičky - porušujete zákon a nemusíte sa kúpať v jazere. Je tam zákaz pohyovať sa mimo takýchto chodníkov.
+Ak váš pes nie je na vôcke a behá si mimo turistických chodníkov - porušujete zákon. Ak trháte pri jazere šípky alebo hríby - porušujete zákon.
+Teraz však je na veľkom jazere sloboda, štátna ochrana prírody nemá dostatok ľudí a ani prostriedky na kontrolu zákona a pred porušovaním zákona zatvára oči. 
+Na jazere je akási sloboda a za to že tam nie je smetisko vďačíme iba dobrovoľníkom. 
+Niektorí ľudia si ale neuvedomjú, že si túto slobodu na jazerách musia vážiť, lebo sa môže stať že o ňu prídu. 
+<br><br>
+Áno veľa návštevníkov sa správa slušne a aj keď čiastočne porušujú zákon, nie je to nič čo by ohrozovalo prírodu. 
+<br><br>
+Za posledné roky sa z jazier stala celoročná turistická atrakcia Bratislavy. V lete a počas sviatkov tam prúdia davy návštevníov.
+Rodinky s deťmi, bežci, plavci a otužilci, nudisti, turisti zo Slovenska ale aj zahraničia. 
+Všetci objavujú krásu Čunovsých štrkovísk a okolia. Veľa z nich ani nevie (alebo ani nechce vedieť), že sa ocitli v prírode so štvrtým stupňom ochrany.
+Na jazerách sa často stretávam nielen s vyhodeným odpadom, ničením okolitej prírody, ale často aj s 
+hlučnými skupinkami partií, rodiniek, rybárov, otužilcov.
+Stáva sa že si tam niektorí púšťajú hlasnú hudbu, alebo sa tam dovezú na motorkách, zakladajú ohne. 
+Akoby krásne prírodné prostredie priťahovalo práve takéto sebecké indivíduá, ktoré nevedia ako sa správať v prírode. Vďaka takýmto jedincom sa ale
+môže stať, že štátne inštitúcie sa prebudia a kúpanie sa na jazerách už nebude ďalej tolerované a jazerá sa uzavrú. Bola by to veľká škoda!
+<br><br>
+Koniec roka 2024 sa blíži. Na jazerách bol dnes tenký ľad, malé jazero pokrýval celé a veľké iba čiastočne. 
+Pozbieral som odpadky z miest pri vode veľkého jazera zo strany pri asfaltke. Z vody som vybral žltý sáčok na smeti. 
+Ryársky odpad ako zavárací pohár s kukuricou som našiel zastrčený v diere v upravenom brehu. Našiel som aj rybársky silón.
+Samozrejme špaky. Zapaľovač niekto nechal v padnutom strome. Ďalšie odpadky ako nejaký aplikátor, časť dámskej vložky, mikrotén, obaly, PET, konzerva...
+
+
+
+</p>
+
+<table class=MsoTableGrid border=0 cellspacing=0 cellpadding=0 style='border-collapse:collapse;border:none'>
+ <tr>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image019.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image019.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image020.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image020.jpg"></a></p>
+  </td>
+  <td height=200 valign=top style='padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'> <a href="2024L/image021.jpg" target="_blank">
+    <img height=200 id="Obrázok 27" src="2024/image021.jpg"></a></p>
+  </td>
+
+
+
+ </tr>
+
+</table>
+
+
+
+
+	
+
 
 
 <br>
