--- a/uvod.html
+++ b/uvod.html
@@ -176,26 +176,110 @@ var m = new SMap(JAK.gel("m"), center, 17, SMap.DEF_OPHOTO);
 <h2 style="color:Tomato;">Čunovské jazerá a odpadky.</h2>
 <span style="color:#b9cb99;">
 <p>
-Nie, nie som jediný kto zbiera/zbieral odpadky na Čunovských jazerách a ani som nezačal zber odpadkov na tomto krásnom mieste.
-Môj ciel bol skôr poukázať na znečisťovanie jazier a inšpirovať k ich čisteniu.
-Samozrejme dobrovoľníci, ktorým záležalo na čistote a kráse jazier sa našli vždy. Problém bol skôr v tom že
-akcie keď sa zbierali odpadky boli skôr nárazové a nestihol sa vyzbierať všetok odpad.
+
+Prečo je znečisťovanie jazier tak sledovaná a citlivá tema pre Bratislavu?
+Kúpať sa a porušovať zákon, alebo nekúpať sa?
+<br><br>
+(mimochodom ak nechcete porušovať zákon musíte sa kúpať len na malom jazere alebo ísť peši len po turistických cestách okolo veľkého jazera,
+alebo byť rybár s pvolením)
+<br><br>
+Ťažba štrku v oblasti Čunovských jazier sa datuje do šesdesiatych a postupný vznik jazier do sedemdesiasiatych rokov.
+V tomto období sa začína o novovznikntých jazerách uvažovať ako o rekreačnom potenciále pre rozrastajúcu sa Bratislavu
+a najmä pre obyvateľov vznikajúcej Petržalky. Nové rozrastajúce sa mesto však potrebovalo nielen rekreačné oblasti, ale najmä
+pitnú vodu, ktorej (aj vďaka znečisťovaniu a eko haváriám) malo nedostatok. Častokrát ju mesto muselo pre obyvatelov dopravovať v cisternách. 
+A tak sa v tejto oblasti priebežne robili aj prieskmy. Zistilo sa, že je tu veľa kvalitnej podzemnej vody a
+severne od jazier sa vybudoval výdatý vodný zdroj Ostrovné lúčky. 
+Pre mesto, ktoré trpelo nedostatkom pitnej vody to bol veľký zázrak.
+Musel sa však chrániť a tak inštitúcie nariadili ochránné pásma ktoré siahali až k čunovským a rusovským jazerám. Bola obava,
+že znečisťovanie týchto jazier môže znečistiť aj podzemnú vodu, ktorá v tom čase prúdila smerom k vodnému zdroju.
+A tu nastal obrovský problém. Akýsi konflikt, ktorý pretrváva až do dnes. 
+<br><br>
+Rastúce obyvateľstvo Bratislavy potrebovalo okrem pitnej vody aj relax v prírode a v letných horúčavách najmä oddych pri vode. 
+Dunaj bol znečistený, kúpaliská preplnené a štrkoviská so svojou samočistiacou schopnosťou boli najlepšia možnosť kúpania sa. 
+Obyvateľstvo tak začalo postupne objavovať aj odľahlé Čunovské jazerá a ich okolitú prírodu. 
+A tak ľudí a odpadkov na jazerách pribúdalo a socialistické inštitúcie sa začali obávať znečistenia vodného zdroja. 
+Nastal konflikt, socialistická polícia vyháňala ľudí z jazier a tí sa sem vždy vracali a brali to ako obmedzovanie ich slobody.
+Boj medzi inštitúciami omedzjúcimi ľuďom v ich práve na relax po práci, v ich slobodách vs ochrana vôd. Veľa kúpajúcich pochyovalo
+o tom, že ich pobyt na jazere by mohol znečistiť vodný zdroj.  
+<br><br>
+Ako čas plynul, začal sa črtať ďalší prolém. Vlastne bolo ich niekoľko. 
+Prvý bol ten že príroda sa ako tak zotavila z ťažkých mechanizmov a ťažby štrku a zistilo sa dokonca, 
+že lesy ale najmä lúky v oblasti skrývajú poklady v podobe vzácnej flóry a fauny.  
+Druhý bol ten, že ekonomika Slovenska na svoj rozvoj potrebovala elektrickú energiu a tú malo zabezpečiť vodné dielo na Dunaji.
+Výstavba tohoto diela sa poriadne zahryzla do okolitých lužných lesov. Aj jazerá zasiahli ťažké mechanizmy, 
+keď sa tu budovala asfaltová cesta, ktorú potrebovali pre výstavbu vodného diela. 
+Stavebný odpad a panely z jej výstavby, ktoré už nepotreovali jednoducho nahádzali do jazera a sú tam dodnes. Tento odpad sa pridal k
+stavebnému odpadu, ktorý tam bol ešte z čias ťažby štrku.
+<br><br>
+Až po napustení vodného diela (VD Gačíkovo)sa zničená oblasť začala ako tak obnovovať.
+Tok podzemnej vody sa postupne zmenil a jazerá už neovplyvňovali vodný zdroj. Strach zo znečistenia dôležitého vodného zdroja
+pomynul, ale na povrch vyplával nový, vlastne to bol ten dávny už spomínaný.
+Obrovská návštevnosť v letných mesiacoch spôsobovla ničenie a znečisťovaním chránenej prírody - vznikajúceho biotopu. 
+Chvílkové povolenie kúpania na veľkom jazere a možnosť parkovania motorovými prostriedkami malo za následok masívne znečisťovanie jazier,
+vytváranie skládok a ničenie vzácnych rastlín na okolitých lúkach. Pád socializmu a rast ekonomiky - sloboda a nárast konzumu, 
+plastových obalov a pohŕdanie zákonom - prírodou mal za následok to, že sa z jazier stalo smetisko. 
+Akási skládka odpadu, ktorú jedna menšina tvorila, iná tolerovala a ďalšia s ňou bojovala. Čnovské jazerá vyzerali ako jedna veľká skládka odpadu, ktorú sa snažili
+niektorí zodpovední občania, rybári a samospráva minimalizovali. Boj pomocou pokút, zamedzovaniu vstupu, polície, brán, plotov a
+rámp. Dobrovoľnícke združenia, rybári a samospráva sa snažili aspoň minimalizovať odpad na jazerách každoročnými briádami avšak nič nepomohlo. 
+Znečisťovanie Čunovských jazier - častá téma v periodikách. Nekonečný boj a odpadu bolo toľko, že sa nedal úplne celý vyzbierať. 
+Veľa odpadu navyše bolo aj vo vode,v zemi, v ťažko dostuupných kríkoch a brehoch.
+<br><br>
+Postupom času však ľudí čo zbierajú odpadky začalo pribúdať a odpadu z jazier ubúdať. Dnes patria Čunovské jazerá nielen medzi tie najkrajšie
+ale hlavne medzi tie najčistejšie.  
+
+<br><br>
+Keď som pred niekoľkými rokmi začal zbierať odpadky na čunovských jazerách, nevedel som kde začať. 
+Z mojej strany to bolo niečo ako úcta a poďakovanie jazerám že tu môžem tráviť voľný čas. A zároveň
+som sa hanbil za ľudí, ktorí to tu znečisťujú a ničia. Začal som odstraňovaním stavieb, akési spevnenia
+brehov, ktoré boli odporné a plné kadejakého odpadu. Povedal som si, že vždy keď navštívim jazerá
+niečo vyzbieram a hlavne s nedostupných kríkov a brehov. A tak postupne jazero vyčistím.
+Na začiatku sa mi do toho vôbec nechcelo, veď komu sa dobrovoľne chce zbierať odpadky?
+Ale postupne ma to začalo baviť a tak som v tom pokračoval. Občas niečo pozbierala aj
+priateľka, ktorá ale nikdy nechcela aby som ju uviedol na socialnych sieťach, tak to robím dodatočne.
+Počas zberu odpadkov som sa stretol s kadečím a kadekým. 
+Videl som ako si nudista vešia mikroténové sáčky na zrezané stromy vo vode ako keby vytváral umenie, samozrejme ich tam nechal.
+Videl som ako rybár hádže plné vedrá krmiva do vody prakom. Ako si rybári donesú toľko potrieb a tašiek že
+na ne mali samotný samorozkladací stan aby im nezmokli. Upozorňoval som pána aby si neumýval špinavý bicykel v jazere.
+Niekoľko krát som upozornil ľuďí aby si nezakladali oheň. Upozorňoval som deti aby kosákom neničili vegetáciu.
+Keď som išiel so smeťami častokrát som videl a počul ako sa ľudia vysmievajú. Jeden na mňa chcel aj zavolať políciu
+keď si myslel že pálim smeti, zatiaľ čo ja som ich len fotil. Videl som však aj ľudí čo zbierajú odpadky a to mi dávalo nádej.
+<br><br>
+
+Keď som začal zierať smeti ol som v domnení že väčinou zbieram po dovolenkároch.
+Vedel som že veľa odpadkov produkujú kúpajúci sa a najmä výrastkovia. No postupom času
+som zistil, že takmer neustále zbieram odpadky po rybároch. Prekvapilo ma to a bol to pre mňa veľký šok.
+Dovtedy som si myslel, že sú to ľudia, ktorí maju radi prírodu.
+
+<br><br>
+Raz som sa rozhodol, že príspevky a fotky odpadkov čo vyzbieram dám na socialne siete nech ľudia vidia aký tam je odpad a kto znečisťuje jazero.
+Najprv som si povedal že dám to tam a uvidí sa a nečakal som vôbec že to niekoho zaujme.
+Ale ľudí to celkom zaujalo a tak som pokračoval, ale už s cielom poukázať na znečisťovanie jazier a 
+inšpirovať ďalších ľudí k ich čisteniu. Išiel som príkladom a spolu s ďalšími dobrovoľníkmi ktorí sa postupne pridávali 
+(aj keď som ich osobne nevidel) sa nám podarilo urobiť z týchto krásnych jazier jedny z najčistejšich jazier v Bratislave.
+Najmä rok 2023 a 2024 boli prelomové v tomto.
+
+Ľuďom čo si myslia že odpadky sa predtým na jazerách nevyskytovali chcem odkázať aby si prečítali staré novinové články
+nájdu ich aj na téjto stránke v menu UVEREJNILI.
 Áno odpadky trápia jazerá už od ich vzniku, takže to nie je novodobý fenomén ako by si niekto myslel.
-Dôkazom toho sú retro odpadky, ktoré som neustále nachádzal. Napr ešte z čias ČSSR.
-Dokonca je v pôde zahrabaný aj stavebný odpad pravdepodobne ešte z čias keď sa na jazerách ťažil štrk.
+Dôkazom toho sú retro odpadky, ktoré som neustále nachádzal. Napr Indulona ešte z čias ČSSR.
+Dokonca je v pôde zahrabaný aj stavebný odpad pravdepodobne ešte z čias keď sa na jazerách ťažil štrk a stavala panelovo-asfaltová cesta.
 Nejaký ten odpad urobili aj návštevníci jazier, ktorí si tam začali upravovať a spevňovať brehy ešte kedysi dávno.
 
-<br> 
-Názor, že jazerá špinili iba ľudia, ktorí nebývajú v okolí tzv "cezpoľní" je mylný.
-V každej skupine ľudí sa vždy nájde určité percento znečisťovateľov, či už to sú domáci alebo prišelci, rybári alebo kúpajúci sa atď.
-Taktiež názor že rybári s povolením nešpinia jazerá a robia to iba takí čo tam chytajú na čierno je chybný.
+<br><br>
+Názor, že jazerá špinili iba ľudia, ktorí nebývajú v okolí je mylný. Alebo že to robia iba prisťahovalci.
+V každej skupine ľudí sa vždy nájde určité percento znečisťovateľov, či už to sú domáci alebo prišelci, rybári alebo kúpajúci, 
+nudisti či otužilci atď.
+Čítal som aj názor že rybári s povolením nešpinia jazerá a robia to iba takí čo tam chytajú na čierno.
 V ľudskej povahe je odjakživa zakódovaná akási obrana tej skupiny do ktorej patria.
-Samozrejme nikto si neprizná, že niekde vyhodil odpadky a tieto radšej pripíše na vrub niekoho iného.
+Samozrejme nikto si neprizná, že niekde vyhodil odpadky a tieto radšej pripíše na vrub niekoho iného. 
+<br><br>
+
 V minulosti takáto diskusia okolo znečisťovania jazier bola stále a slušní ľudia doplácali na tých neslušných.
 Jeden obviňoval druhého, ale odpadky zbierala iba hŕstka ľudí.
-Postupne ako z jazier začalo ubúdať odpadkov, sa táto diskusia upokoljila a dnes(rok 2023)vytratila.
+Postupne ako z jazier začalo ubúdať odpadkov, sa táto diskusia upokoljila a dnes(rok 2025) sa vytratila.
 <br>
 Či to tak ostane aj naďalej závisí iba na ľuďoch, ktorí navštevujú tieto nádherné jazerá a skutočne im na nich záleží. 
+	
 </p>
 
 
